--- a/Thermory.Web/Views/Home/Index.cshtml
+++ b/Thermory.Web/Views/Home/Index.cshtml
@@ -15,6 +15,12 @@
 <h3>Progress Report:</h3>
 <ul>
     <li>
+        <h5>6/24/2016</h5>
+        <ul>
+            <li>Completed packing slip creation.</li>
+        </ul>
+    </li>
+    <li>
         <h5>6/6/2016</h5>
         <ul>
             <li>Completed order status transitions other than packing slip creation.</li>
