--- a/Thermory.Web/Views/Shared/Order/Form.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Form.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Thermory.Domain.Enums
+@using Thermory.Domain.Models
 @model Thermory.Web.Models.OrderForm
 @{
     var firstCategoryId = Model.LumberOrderForms.First().LumberCategory.Id;
@@ -10,6 +11,7 @@
     var cancelUrl = Model.Order.Id == Guid.Empty
         ? Url.Action("Index", controller)
         : Url.Action("Review", controller, new RouteValueDictionary { { "id", Model.Order.Id } });
+    var orderCustomer = Model.Order.Customer ?? new Customer();
 }
 
 <h3><strong>@title</strong></h3>
@@ -29,7 +31,7 @@
             </td>
         </tr>
         <tr>
-            <td>
+            <td rowspan="4" style="vertical-align: top;">
                 <label for="customerId">Customer</label>
             </td>
             <td>
@@ -38,12 +40,36 @@
                     @foreach (var customer in Model.Customers)
                     {
                         var selected = customer.Id == Model.Order.CustomerId ? " selected=\"selected\"" : "";
-                        <option value="@customer.Id" @selected>@customer.Name</option>
+                        <option value="@customer.Id" addressline1="@customer.AddressLine1" addressline2="@customer.AddressLine2" addressline3="@customer.AddressLine3" @selected>@customer.Name</option>
                     }
                 </select>
             </td>
             <td>
                 <input type="text" id="customerName" class="form-control" />
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label for="addressLine1">Address Line 1</label>
+            </td>
+            <td>
+                <input type="text" id="addressLine1" class="form-control" value="@orderCustomer.AddressLine1" />
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label for="addressLine2">Address Line 2</label>
+            </td>
+            <td>
+                <input type="text" id="addressLine2" class="form-control" value="@orderCustomer.AddressLine2" />
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label for="addressLine3">Address Line 3</label>
+            </td>
+            <td>
+                <input type="text" id="addressLine3" class="form-control" value="@orderCustomer.AddressLine3" />
             </td>
         </tr>
         @if (orderType == OrderTypes.SalesOrder)
@@ -204,7 +230,14 @@
         var selectedCustomer = $('#customerId option:selected');
 
         var customerName = selectedCustomer.val() == '@Guid.Empty' ? '' : selectedCustomer.text();
+        var addressLine1 = selectedCustomer.attr('addressLine1');
+        var addressLine2 = selectedCustomer.attr('addressLine2');
+        var addressLine3 = selectedCustomer.attr('addressLine3');
+
         $('#customerName').val(customerName);
+        $('#addressLine1').val(addressLine1);
+        $('#addressLine2').val(addressLine2);
+        $('#addressLine3').val(addressLine3);
     }
 
     function getCustomer() {
@@ -213,8 +246,11 @@
             ? null
             : {
                 Id: $('#customerId').val(),
-                Name: name
-            };
+                Name: name,
+                AddressLine1: $('#addressLine1').val(),
+                AddressLine2: $('#addressLine2').val(),
+                AddressLine3: $('#addressLine3').val()
+    };
     }
 
     function packagingTypeChanged() {
