--- a/Thermory.Web/Views/Shared/Order/Review.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Review.cshtml
@@ -270,7 +270,7 @@
                           {
                               <div style="padding: 5px 5px 0 5px;">
                                   <div type="button" class="btn btn-primary" onclick="window.location=('@Url.Action("Package", "SalesOrder")/@Model.Order.Id');">
-                                      <span class="glyphicon glyphicon-list-alt"></span> Edit packaging slip(s)
+                                      <span class="glyphicon glyphicon-edit"></span> Edit packaging slip(s)
                                   </div>
                               </div>
                           }
